--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.1",
   "description": "my first socket.io app",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "signalhub": "^4.9.0",
     "socket.io": "^4.1.2",
     "webrtc-swarm": "^2.9.0"
   },
   "scripts": {
+    "sstart": "signalhub listen -p 8080",
     "start": "node index.js"
   }
 }
