--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "socket-chat-example",
+  "name": "gatinchat",
   "version": "0.0.1",
   "description": "my first socket.io app",
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.1",
+    "express": "^4.17.2",
+    "nodemon": "^2.0.15",
     "signalhub": "^4.9.0",
     "socket.io": "^4.1.2",
     "webrtc-swarm": "^2.9.0"
