--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "nodemon": "^2.0.15",
-    "signalhub": "^4.9.0",
-    "socket.io": "^4.1.2",
-    "webrtc-swarm": "^2.9.0"
+    "socket.io": "^4.1.2"
   },
   "scripts": {
-    "sstart": "signalhub listen -p 8080",
     "start": "node index.js"
   }
 }
