--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "nodemon": "^2.0.15",
+    "random-anime": "^1.0.6",
     "socket.io": "^4.1.2"
   },
   "scripts": {
